:sparkles: Add user api
添加用户接口
