# server/docs/swagger.yaml
@@ -1,5 +1,36 @@
 basePath: /
 definitions:
+  request.ChangePassword:
+    properties:
+      newPassword:
+        example: "1234567"
+        type: string
+      password:
+        example: "123456"
+        type: string
+      username:
+        example: admin
+        type: string
+    type: object
+  request.CreateUser:
+    properties:
+      email:
+        type: string
+      header_img:
+        type: string
+      nick_name:
+        type: string
+      password:
+        type: string
+      phone_number:
+        type: string
+      real_name:
+        type: string
+      status:
+        type: integer
+      user_name:
+        type: string
+    type: object
   request.Login:
     properties:
       password:
@@ -7,6 +38,40 @@ definitions:
         type: string
       username:
         example: admin
+        type: string
+    type: object
+  request.PageInfo:
+    properties:
+      page:
+        type: integer
+      pageSize:
+        type: integer
+    type: object
+  v1.User:
+    properties:
+      created_at:
+        type: string
+      created_by:
+        type: integer
+      email:
+        type: string
+      header_img:
+        type: string
+      id:
+        type: integer
+      nick_name:
+        type: string
+      phone_number:
+        type: string
+      real_name:
+        type: string
+      status:
+        type: integer
+      updated_at:
+        type: string
+      updated_by:
+        type: integer
+      user_name:
         type: string
     type: object
 host: localhost:8080
@@ -23,13 +88,71 @@ info:
   title: Swagger Example API
   version: "1.0"
 paths:
+  /api/v1/user/changePassword:
+    post:
+      parameters:
+      - description: 用户名, 原密码, 新密码
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.ChangePassword'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"修改密码成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 修改密码
+      tags:
+      - 用户
+  /api/v1/user/create:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 用户名,密码
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.CreateUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"添加用户成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 添加用户
+      tags:
+      - 用户
+  /api/v1/user/detail:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"获取用户详情成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 用户详情
+      tags:
+      - 用户
   /api/v1/user/info:
     get:
       produces:
       - application/json
       responses:
         "200":
-          description: '{"success":true,"data":{},"msg":"登录成功"}'
+          description: '{"success":true,"data":{},"msg":"获取用户信息成功"}'
           schema:
             type: string
       security:
@@ -37,10 +160,34 @@ paths:
       summary: 用户信息
       tags:
       - 用户
+  /api/v1/user/list:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 页码, 每页大小
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.PageInfo'
+      produces:
+      - application/json
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"修改密码成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 分页用户列表
+      tags:
+      - 用户
   /api/v1/user/login:
     post:
       parameters:
-      - description: 用户登录接口
+      - description: 用户名, 密码
         in: body
         name: data
         required: true
@@ -68,6 +215,29 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 用户退出
+      tags:
+      - 用户
+  /api/v1/user/update:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID, 用户名, 昵称, 头像链接
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/v1.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"更新用户信息成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 更新用户信息
       tags:
       - 用户
 securityDefinitions:
